# toynet

./: .gitignore  LICENSE  README.md  generate_requirements.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: styling_and_tests.yml
src/toynet/: __init__.py  config.py
src/toynet/data_loaders/: __init__.py  basic_data_loader.py  csv_data_loader.py  protocol.py
src/toynet/functions/: __init__.py  abstract.py  activation.py  loss.py
src/toynet/initalizers/: __init__.py  abstract.py  he.py  xavier.py
src/toynet/layers/: __init__.py  dense.py  protocol.py
src/toynet/networks/: __init__.py  mlp.py  protocol.py
src/toynet/optimizers/: __init__.py  adam.py  basic_optimizer.py  protocol.py
src/toynet/policies/: __init__.py  periodically_save_model.py  protocol.py  reduce_lr_on_plateu.py  save_best_model.py  validation_early_stop.py
tests/e2e/: test_mlp.py
tests/e2e/models/: multiclass_xor.testmodel
tests/integration/: test_dense.py
tests/uts/: test_activation.py  test_data_loaders.py  test_initializers.py  test_loss.py  test_optimizers.py  test_policies.py
